crates/willikins-cli/tests/snapshots/walter_document__walter_render_bootstrap_yml.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/.buildkite/bootstrap.yml
---
{
  "env": {
    "GIT_CONFIG_COUNT": "3",
    "GIT_CONFIG_KEY_0": "credential.https://github.com/Bande-a-Bonnot/monorepo.git.helper",
    "GIT_CONFIG_VALUE_0": "",
    "GIT_CONFIG_KEY_1": "credential.https://github.com/Bande-a-Bonnot/monorepo.git.helper",
    "GIT_CONFIG_VALUE_1": "!buildkite-agent secret get DOPPLER_SERVICE_ACCOUNT_TOKEN | sed 's/^/Authorization: Bearer /' | curl -fsS --max-time 20 -H @- 'https://api.doppler.com/v3/configs/config/secret?project=walter&config=prd_deployment_ios&name=GH_CLONE_TOKEN' | python3 -c 'import json, sys; print(\"username=x-access-token\"); print(\"password=\" + json.load(sys.stdin)[\"value\"][\"computed\"])'",
    "GIT_CONFIG_KEY_2": "url.https://github.com/Bande-a-Bonnot/monorepo.git.insteadOf",
    "GIT_CONFIG_VALUE_2": "git@github.com:Bande-a-Bonnot/monorepo.git"
  },
  "steps": [
    {
      "key": "walter-bootstrap",
      "label": "Walter: select pipeline",
      "agents": {"queue": "ci-macos-apple-silicon"},
      "command": "bash apps/walter/.buildkite/upload-pipeline.sh",
      "timeout_in_minutes": 5
    }
  ]
}
