crates/willikins-cli/tests/snapshots/walter_document__walter_render_build_bazel_app.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/BUILD.bazel
---
# Walter app package.
