crates/willikins-cli/tests/snapshots/walter_document__walter_render_buildkite_readme.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/.buildkite/README.md
---
# Walter Buildkite files

- `bootstrap.yml` is what `buildkite.pipeline.bootstrap.ensure` stores as
  the pipeline's configuration on every run of this document, replacing
  the frozen upload bootstrap the pipeline was created with. No paste:
  the tool compares the stored configuration to this file structurally,
  as YAML, and only writes when they differ.
- `upload-pipeline.sh` is the selector the bootstrap step runs. It reads
  `WALTER_CI_ACTION` (`validation` by default, `signing-preflight`, or
  `release`) and uploads the matching pipeline file. An unrecognised
  action exits 2.
- `pipeline.yml` is credential-free validation: it verifies the source,
  clones it privately, builds `//apps/walter/...` and runs the offline
  Python unit tests. It never touches Doppler.
- `signing-preflight.yml` runs the same signing checks the package job
  runs first -- Doppler names present, keychain lifecycle, profiles
  fetched by name, identity/profile intersection, entitlement coverage
  -- with no build and no upload. Run it (`WALTER_CI_ACTION=signing-preflight`)
  before a release to catch a signing problem without spending a package.
- `release.yml` is the release graph: `walter-validation`, then
  `walter-package` (sign, build, inspect, and write the immutable
  package bytes), then `walter-upload` (which re-verifies and sends
  exactly those bytes and never rebuilds). Every step in the chain
  disables retries.
- `plugins/stage-input/` is a local plugin whose host-side hook binds
  `walter-upload` to `walter-package`'s own verified artifacts within
  this one build; it never reaches across builds.
- `provider-settings.json` is the record of intent: every automatic
  trigger stays disabled until this scaffold is reviewed and the
  pipeline has run at least once with real content.

## Starting a release

A release is a build of a reviewed `main` commit, started by hand from
the Buildkite UI ("New Build") or the API, with the environment
variable `WALTER_CI_ACTION=release`. That click is the human's release
decision, not setup. **The branch check `upload-pipeline.sh` runs
(`BUILDKITE_BRANCH` is `main` and `BUILDKITE_PULL_REQUEST` is `false`)
is not authorization** -- it only proves which ref, not who may
release. Release credentials are bounded by who can start a build on
`la-bande-a-bonnot/walter`.

## Version policy

`tools/release-config.json`'s `build_number_offset` can only go up. It
is `0` because Walter has no previous provider. Walter's build number
is `BUILDKITE_BUILD_NUMBER + build_number_offset`; its marketing
version is `release-config.json`'s `marketing_version`. App Store
Connect availability is checked before packaging and again before
uploading, but that check is an observation, not a reservation: it does
not reserve the number. **Never re-upload an uncertain build without
reconciling it first** -- if `walter-upload` times out or Apple's
processing state is unclear, resolve it in App Store Connect before
starting another release, never by guessing and uploading again.

## M7: the stored bootstrap

Buildkite's pipeline is created with a frozen, generic upload bootstrap
as its stored Settings -> Steps configuration. `buildkite.pipeline.bootstrap.ensure`
replaces it with this directory's own `bootstrap.yml` on every run,
only from that file -- never a literal, never input text (milestone
3i, decision (a1)). A re-run with nothing changed reads `NoOp`.

Triggers stay disabled until this scaffold has been reviewed and the
pipeline has run at least once with real content.
