crates/willikins-cli/tests/snapshots/walter_document__walter_render_nse_info_plist.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/ios/Resources/WalterNotificationService-Info.plist
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
    <key>CFBundleDevelopmentRegion</key>
    <string>en</string>
    <key>CFBundleName</key>
    <string>WalterNotificationService</string>
    <key>CFBundleDisplayName</key>
    <string>WalterNotificationService</string>
    <key>CFBundleShortVersionString</key>
    <string>0.1.0</string>
    <key>CFBundleVersion</key>
    <string>1</string>
    <key>CFBundlePackageType</key>
    <string>XPC!</string>
    <key>ITSAppUsesNonExemptEncryption</key>
    <false/>
    <key>UIRequiredDeviceCapabilities</key>
    <array>
        <string>arm64</string>
    </array>
    <key>NSExtension</key>
    <dict>
        <key>NSExtensionPrincipalClass</key>
        <string>WalterNotificationService.NotificationService</string>
        <key>NSExtensionPointIdentifier</key>
        <string>com.apple.usernotifications.service</string>
    </dict>
</dict>
</plist>
