crates/willikins-cli/tests/snapshots/walter_document__walter_render_nse_swift.snap
---
source: crates/willikins-cli/tests/walter_document.rs
expression: "format!(\"{}\\n---\\n{}\", file.path(), file.content())"
---
apps/walter/ios/WalterNotificationService/Sources/NotificationService.swift
---
import UserNotifications

final class NotificationService: UNNotificationServiceExtension {
    private var contentHandler: ((UNNotificationContent) -> Void)?
    private var bestAttemptContent: UNMutableNotificationContent?

    override func didReceive(
        _ request: UNNotificationRequest,
        withContentHandler contentHandler: @escaping (UNNotificationContent) -> Void
    ) {
        self.contentHandler = contentHandler
        bestAttemptContent = request.content.mutableCopy() as? UNMutableNotificationContent
        if let bestAttemptContent {
            contentHandler(bestAttemptContent)
        }
    }

    override func serviceExtensionTimeWillExpire() {
        if let contentHandler, let bestAttemptContent {
            contentHandler(bestAttemptContent)
        }
    }
}
